// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test getExchangePriceFix 1`] = `
Array [
  634.7,
  0.2,
]
`;

exports[`test getExchangePriceFix 2`] = `
Array [
  637,
  3.0010585,
]
`;

exports[`test getExchangePriceFix 3`] = `
Array [
  667,
  0.012,
]
`;

exports[`test getExchangePriceFix 4`] = `
Array [
  633,
  4.335,
]
`;

exports[`test getVolumeMedianPrice 1`] = `634.69`;

exports[`test getVolumeMedianPrice 2`] = `638`;

exports[`test getVolumeMedianPrice 3`] = `666.98`;

exports[`test getVolumeMedianPrice 4`] = `633`;

exports[`test modifyWeightage 1`] = `
Array [
  0.35,
  0.3,
  0.17500000000000004,
  0.17500000000000004,
]
`;

exports[`test modifyWeightage 2`] = `
Array [
  0.55,
  0.29999999999999993,
  0.14999999999999997,
]
`;

exports[`test modifyWeightage 3`] = `
Array [
  0.65,
  0.35,
]
`;

exports[`test normalizeWeightage 1`] = `
Array [
  0.1,
  0.2,
  0.3,
  0.4,
]
`;
